--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-rembg/_version.py export-subst
-u2net/*.onix filter=lfs diff=lfs merge=lfs -text
+u2net/u2net.onnx filter=lfs diff=lfs merge=lfs -text
+u2net/u2net_cloth_seg.onnx filter=lfs diff=lfs merge=lfs -text
+u2net/u2net_human_seg.onnx filter=lfs diff=lfs merge=lfs -text
